--- a/mobile-md10/package.json
+++ b/mobile-md10/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "modulo10",
+  "name": "GoBarberMobile",
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.8.1",
     "@react-native-community/masked-view": "^0.1.7",
+    "axios": "^0.19.2",
+    "date-fns": "^2.0.0-beta.5",
+    "immer": "^6.0.2",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
@@ -19,6 +25,15 @@
     "react-native-screens": "^2.4.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.3",
+    "react-navigation-stack": "^2.3.9",
+    "react-navigation-tabs": "^2.8.9",
+    "react-redux": "^7.2.0",
+    "reactotron-react-native": "^5.0.0",
+    "reactotron-redux": "^3.1.3",
+    "reactotron-redux-saga": "^4.2.3",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
